          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Made intersection
          enumeration in BVolume a named type.

2002-09-27  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Windows/VisualC6/winconfig.h: In MSVC project
          file, if macros are defined with values, it does not give 
          the result as expected. Rename "winconfig.h" as "config.h"
          to define macros for MSVC project file. Inside the project
          file "HAVE_CONFIG_H" macro is defined.

2002-09-27  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Remove the directory regex. This library is under GPL whereas
          OpenVRML is under LGPL.

2002-09-26  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Create a directory under "lib" by name "regex" to put
          needed file (regex.c and regex.h) from regular expression
          library <http://ftp.gnu.org/pub/gnu/regex/regx-0.12.
          tar.gz>. These files are needed for MSVC build.

        * Put Makefile.vc6 to build regex library using MSVC

        * lib/regex/regex.h: Minor fixes for MSVC build to deal with
          "extern".
   
2002-09-25  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/browser.cpp: Removed Node::toInline
          method.

        * src/openvrml/OpenVRML/field.cpp: Fixed const issue.

        * src/openvrml/OpenVRML/script.cpp: Eliminated <strstream>
          dependency; moved includes needed only by the JavaScript
          binding to the conditionally compiled section.

2002-09-23  S. K. Bose  <bose@pavan.barc.ernet.in>

        * src/openvrml/OpenVRML/field.cpp: VC++6.0 complains about